Fixed Overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,10 @@ body, html {
     }
 
 .row {
-    padding-right: 0px;
-    padding-left: 0px;
+    /* padding-right: 0px;
+    padding-left: 0px;*/
+    padding: 0;
+    margin: 0;
      }
 
 
